--- a/websiteimpacts.html
+++ b/websiteimpacts.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Warming Awareness Hub - Impacts and Solutions</title>
+    <link rel="stylesheet" href="styles2.css"> 
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,5 +63,13 @@
             <p class="image-caption">The following is an infographic about why you should invest in renewable energy sources</p>
         </div>
     </div>
+    <nav>
+        <ul>
+            <li><a href="websitehomepage.html">Homepage</a></li>
+            <li><a href="websitecauses.html">Causes and Contributors</a></li>
+            <li><a href="websiteimpacts.html">Impacts and Solutions</a></li>
+            <li><a href="websitecontact.html">Contact Us</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
