--- a/websitehomepage.html
+++ b/websitehomepage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Warming Awareness Hub - Homepage</title>
+    <link rel="stylesheet" href="styles.css"> 
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,5 +49,13 @@
         <img src="2_co2_infographic.jpg" alt="Image 1">
         <img src="ClimateRiskMapLN-superJumbo.png" alt="Image 2">
     </div>
+    <nav>
+        <ul>
+            <li><a href="websitehomepage.html">Homepage</a></li>
+            <li><a href="websitecauses.html">Causes and Contributors</a></li>
+            <li><a href="websiteimpacts.html">Impacts and Solutions</a></li>
+            <li><a href="websitecontact.html">Contact Us</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
