--- a/websitecauses.html
+++ b/websitecauses.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Warming Awareness Hub - Causes and Contributors</title>
+    <link rel="stylesheet" href="styles2.css"> 
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,5 +50,13 @@
             <img src="image 4.png" alt="Image 4">
         </div>
     </div>
+    <nav>
+        <ul>
+            <li><a href="websitehomepage.html">Homepage</a></li>
+            <li><a href="websitecauses.html">Causes and Contributors</a></li>
+            <li><a href="websiteimpacts.html">Impacts and Solutions</a></li>
+            <li><a href="websitecontact.html">Contact Us</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
