--- a/websitehomepage.html
+++ b/websitehomepage.html
@@ -55,6 +55,7 @@
             <li><a href="websitecauses.html">Causes and Contributors</a></li>
             <li><a href="websiteimpacts.html">Impacts and Solutions</a></li>
             <li><a href="websitecontact.html">Contact Us</a></li>
+            <li><a href="websiteindex.html">Index</a></li>
         </ul>
     </nav>
 </body>
