--- a/websiteimpacts.html
+++ b/websiteimpacts.html
@@ -6,61 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Warming Awareness Hub - Impacts and Solutions</title>
     <link rel="stylesheet" href="styles2.css"> 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 20px;
-            text-align: left;
-        }
-
-        header img {
-            height: 50px;
-            vertical-align: middle;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 0 20px;
-        }
-
-        img {
-            max-width: 100%;
-            margin-bottom: 20px;
-        }
-
-        .image-caption {
-            text-align: center;
-            font-style: italic;
-        }
-    </style>
 </head>
 <body>
-    <div class="container">
+    <div id="main-content">
         <h2>Impacts and Solutions</h2>
         <p>Now that we understand the causes, it's crucial to grasp the extensive impacts of global warming. Explore the consequences on ecosystems, wildlife, and human communities. Following this, shift towards a more optimistic note as we delve into innovative solutions and collective actions to mitigate and adapt to the challenges posed by climate change.</p>
         <div class="image-container">
             <img src="image 7.png" alt="Image 1">
-            <p class="image-caption">Investments from different international organizations attempting to stifle the effects. One significant impact of global warming is the rising sea levels. As temperatures increase, ice sheets and glaciers melt, adding more water to the oceans. This can lead to coastal flooding, erosion, and the loss of coastal habitats. Rising sea levels also pose a threat to communities and infrastructure along coastlines, increasing the risk of damage from storms and high tides. Additionally, saltwater intrusion into freshwater sources can impact agriculture and drinking water supplies in coastal areas.</p>
+            <div class="text-box">
+                Investments from different international organizations attempting to stifle the effects. One significant impact of global warming is the rising sea levels. As temperatures increase, ice sheets and glaciers melt, adding more water to the oceans. This can lead to coastal flooding, erosion, and the loss of coastal habitats. Rising sea levels also pose a threat to communities and infrastructure along coastlines, increasing the risk of damage from storms and high tides. Additionally, saltwater intrusion into freshwater sources can impact agriculture and drinking water supplies in coastal areas.
+            </div>
         </div>
         <div class="image-container">
             <img src="image 8.png" alt="Image 2">
-            <p class="image-caption">In the picture above are images of climate change and pollution negatively affecting the environment. Global warming can disrupt ecosystems and biodiversity. As temperatures rise, some species may struggle to survive in their current habitats, leading to shifts in species distributions and possible extinctions. This disruption can have cascading effects throughout ecosystems, affecting food webs and ecosystem services. For example, coral reefs, which support a diverse range of marine life, are particularly vulnerable to the effects of climate change, including ocean acidification and coral bleaching.</p>
+            <div class="text-box">
+                In the picture above are images of climate change and pollution negatively affecting the environment. Global warming can disrupt ecosystems and biodiversity. As temperatures rise, some species may struggle to survive in their current habitats, leading to shifts in species distributions and possible extinctions. This disruption can have cascading effects throughout ecosystems, affecting food webs and ecosystem services. For example, coral reefs, which support a diverse range of marine life, are particularly vulnerable to the effects of climate change, including ocean acidification and coral bleaching.
+            </div>
         </div>
         <div class="image-container">
             <img src="image 9.png" alt="Image 3">
-            <p class="image-caption">Here you can see flooding and forest fires along with other natural disaters that also play a part in our ever changing landscape. One effective solution to global warming is the transition to renewable energy sources such as solar, wind, and hydropower. These sources produce electricity without emitting greenhouse gases, helping to reduce the carbon footprint of energy production. Transitioning to renewable energy can also create jobs in the clean energy sector and reduce dependence on fossil fuels, which are finite resources with significant environmental impacts.</p>
+            <div class="text-box">
+                Here you can see flooding and forest fires along with other natural disaters that also play a part in our ever changing landscape. One effective solution to global warming is the transition to renewable energy sources such as solar, wind, and hydropower. These sources produce electricity without emitting greenhouse gases, helping to reduce the carbon footprint of energy production. Transitioning to renewable energy can also create jobs in the clean energy sector and reduce dependence on fossil fuels, which are finite resources with significant environmental impacts.
+            </div>
         </div>
         <div class="image-container">
             <img src="infographic-climate-why-invest-renewable-energy-en.png" alt="Image 4">
-            <p class="image-caption">The following is an infographic about why you should invest in renewable energy sources. Reforestation and afforestation, the planting of new forests, can help mitigate global warming by absorbing carbon dioxide from the atmosphere. Trees act as carbon sinks, sequestering carbon as they grow. Increasing forest cover can also help to reduce the impacts of deforestation, which contributes to global warming by releasing stored carbon and reducing the Earth's capacity to absorb carbon dioxide. Reforestation efforts can also have additional benefits, such as preserving biodiversity and providing habitat for wildlife.</p>
+            <div class="text-box">
+                The following is an infographic about why you should invest in renewable energy sources. Reforestation and afforestation, the planting of new forests, can help mitigate global warming by absorbing carbon dioxide from the atmosphere. Trees act as carbon sinks, sequestering carbon as they grow. Increasing forest cover can also help to reduce the impacts of deforestation, which contributes to global warming by releasing stored carbon and reducing the Earth's capacity to absorb carbon dioxide. Reforestation efforts can also have additional benefits, such as preserving biodiversity and providing habitat for wildlife.
+            </div>
         </div>
     </div>
     <nav>
