--- a/websitecauses.html
+++ b/websitecauses.html
@@ -48,6 +48,8 @@
         <div class="image-container">
             <img src="image 3.png" alt="Image 3">
             <img src="image 4.png" alt="Image 4">
+            <p>
+Global warming, a pressing environmental issue, is primarily driven by human activities that release greenhouse gases into the atmosphere. One of the leading causes is the burning of fossil fuels such as coal, oil, and natural gas for energy production, transportation, and industrial processes. These activities emit carbon dioxide (CO2) and other greenhouse gases, trapping heat in the Earth's atmosphere and causing the planet to warm. Deforestation is another significant contributor to global warming, as trees play a crucial role in absorbing CO2 from the atmosphere through photosynthesis. However, when forests are cleared for agriculture, urban development, or logging, this natural carbon sink is diminished, leading to increased levels of CO2 in the atmosphere. Additionally, intensive agricultural practices, including livestock farming and rice cultivation, produce methane (CH4) and nitrous oxide (N2O), potent greenhouse gases that contribute to global warming. Addressing these causes through sustainable energy production, reforestation efforts, and agricultural practices is essential to mitigate the impacts of global warming and ensure a sustainable future for our planet.</p>
         </div>
     </div>
     <nav>
@@ -56,8 +58,8 @@
             <li><a href="websitecauses.html">Causes and Contributors</a></li>
             <li><a href="websiteimpacts.html">Impacts and Solutions</a></li>
             <li><a href="websitecontact.html">Contact Us</a></li>
-            <li><a href="websiteindex.html">Index</a></li>
         </ul>
     </nav>
 </body>
 </html>
+
