--- a/websitecauses.html
+++ b/websitecauses.html
@@ -40,7 +40,8 @@
 <body>
     <div class="container">
         <h2>Causes and Contributors</h2>
-        <p>Dive into the heart of the matter as we uncover the major causes and contributors to global warming. From the burning of fossil fuels to deforestation, human activities are significantly altering the Earth's climate. Explore the intricate web of factors leading to the rise in greenhouse gas emissions and temperature.</p>
+        <p>Dive into the heart of the matter as we uncover the major causes and contributors to global warming. From the burning of fossil fuels to deforestation, human activities are significantly altering the Earth's climate. Explore the intricate web of factors leading to the rise in greenhouse gas emissions and temperature. Global warming, a pressing environmental issue, is primarily driven by human activities that release greenhouse gases into the atmosphere. One of the leading causes is the burning of fossil fuels such as coal, oil, and natural gas for energy production, transportation, and industrial processes. These activities emit carbon dioxide (CO2) and other greenhouse gases, trapping heat in the Earth's atmosphere and causing the planet to warm. Deforestation is another significant contributor to global warming, as trees play a crucial role in absorbing CO2 from the atmosphere through photosynthesis. However, when forests are cleared for agriculture, urban development, or logging, this natural carbon sink is diminished, leading to increased levels of CO2 in the atmosphere. Additionally, intensive agricultural practices, including livestock farming and rice cultivation, produce methane (CH4) and nitrous oxide (N2O), potent greenhouse gases that contribute to global warming. Addressing these causes through sustainable energy production, reforestation efforts, and agricultural practices is essential to mitigate the impacts of global warming and ensure a sustainable future for our planet.</p>
+  </p>
         <div class="image-container">
             <img src="image 6.png" alt="Image 1">
             <img src="image 5.png" alt="Image 2">
@@ -48,8 +49,6 @@
         <div class="image-container">
             <img src="image 3.png" alt="Image 3">
             <img src="image 4.png" alt="Image 4">
-            <p>
-Global warming, a pressing environmental issue, is primarily driven by human activities that release greenhouse gases into the atmosphere. One of the leading causes is the burning of fossil fuels such as coal, oil, and natural gas for energy production, transportation, and industrial processes. These activities emit carbon dioxide (CO2) and other greenhouse gases, trapping heat in the Earth's atmosphere and causing the planet to warm. Deforestation is another significant contributor to global warming, as trees play a crucial role in absorbing CO2 from the atmosphere through photosynthesis. However, when forests are cleared for agriculture, urban development, or logging, this natural carbon sink is diminished, leading to increased levels of CO2 in the atmosphere. Additionally, intensive agricultural practices, including livestock farming and rice cultivation, produce methane (CH4) and nitrous oxide (N2O), potent greenhouse gases that contribute to global warming. Addressing these causes through sustainable energy production, reforestation efforts, and agricultural practices is essential to mitigate the impacts of global warming and ensure a sustainable future for our planet.</p>
         </div>
     </div>
     <nav>
