--- a/websiteimpacts.html
+++ b/websiteimpacts.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles2.css"> 
 </head>
 <body>
+    <script src="script.js"></script>
     <div id="main-content">
         <h2>Impacts and Solutions</h2>
         <p>Now that we understand the causes, it's crucial to grasp the extensive impacts of global warming. Explore the consequences on ecosystems, wildlife, and human communities. Following this, shift towards a more optimistic note as we delve into innovative solutions and collective actions to mitigate and adapt to the challenges posed by climate change.</p>
