--- a/websitehomepage.html
+++ b/websitehomepage.html
@@ -40,6 +40,7 @@
     </style>
 </head>
 <body>
+    <script src="script.js"></script>
     <div class="container">
         <h2>Welcome to our Global Warming Awareness Hub</h2>
         <p>Where we aim to enlighten and inspire action against the pressing issue of global warming. In this section, we will explore the basics of global warming, its causes, and the far-reaching consequences for our planet.</p>
