--- a/websiteindex.html
+++ b/websiteindex.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
+    <script src="script.js"></script>
     <header>
         <img src="image1_0.jpg" alt="Logo">
         <h1>Global Warming Awareness Hub</h1>
